--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
       {{ content }}
       
       <footer class="site-footer">
-        <span class="site-footer-credits">© 2024 HyperObjc. | <a href="/privacy">Privacy Policy</a></span> | <a href="/privacy">Privacy Policy</a></span>
+        <span class="site-footer-credits">© 2024 HyperObjc. | <a href="/eula">Term of Service</a></span> | <a href="/privacy">Privacy Policy</a></span>
       </footer>
       
     </main>
