--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
       {{ content }}
       
       <footer class="site-footer">
-        <span class="site-footer-credits">© 2024 HyperObjc. | <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">Term of Use</a></span> | <a href="/privacy">Privacy Policy</a></span>
+        <span class="site-footer-credits">© 2024 HyperObjc. | <a href="/privacy">Privacy Policy</a> | <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">Term of Use</a></span>
       </footer>
       
     </main>
